--- a/src/content/_homepage.yaml
+++ b/src/content/_homepage.yaml
@@ -1,5 +1,4 @@
 intro: Hey, I'm Antoine
-jobTitle: Senior Designer
-catchphraseLine1: Passionate about
-catchphraseLine2: sports and gaming
+jobTitle: Your go-to software<br />and system designer
+catchphrase: Passionate about<br />sports and gaming
 email: hey@antoineplu.co
