--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
         "name": "next"
       }
     ],
+    "baseUrl": "./",
     "paths": {
       "@apee/*": ["./src/*"],
       "keystatic.config": ["keystatic.config"]
