--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "framer-motion": "^10.15.0",
     "next": "13.4.10",
     "react": "18.2.0",
     "react-dom": "18.2.0",
