--- a/src/content/_homepage.yaml
+++ b/src/content/_homepage.yaml
@@ -1,4 +1,4 @@
-intro: Hey, I'm Antoine
+intro: Hey, I'm Antoine Plu
 jobTitle: Your go-to software<br />and system designer
 catchphrase: Passionate about<br />sports and gaming
 email: hey@antoineplu.co
