--- a/package.json
+++ b/package.json
@@ -30,13 +30,19 @@
     "eslint-config-next": "13.4.10",
     "postcss": "8.4.26",
     "prettier-plugin-organize-imports": "^3.2.3",
+    "prettier-plugin-tailwindcss": "^0.5.2",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.6",
     "typescript": "5.1.6"
   },
   "prettier": {
     "plugins": [
-      "prettier-plugin-organize-imports"
+      "prettier-plugin-organize-imports",
+      "prettier-plugin-tailwindcss"
+    ],
+    "tailwindFunctions": [
+      "cva",
+      "cn"
     ]
   }
 }
