--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@keystatic/core": "^0.0.111",
     "@keystatic/next": "^0.0.11",
     "@radix-ui/colors": "^1.0.1",
+    "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-slot": "^1.0.2",
     "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.7.0",
